--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+work/.terraform/*
+work/terraform.tfstate
+work/.terraform.lock.hcl
+work/terraform.tfstate.backup
+
